fix stuck on wp_die

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 iframe {
+  display: block;
   width: 100vw;
   height: calc( 100vh - env(safe-area-inset-top) );
   margin-top: env(safe-area-inset-top);
